--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <!-- REPLACE WITH KENS INFO -->
   <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
   <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
-  <!-- <script type="text/javascript">Calendly.initBadgeWidget({url: 'https://calendly.com/thebeardedtek/30min', text: 'Schedule time with me', color: '#00a2ff', branding: true});</script> -->
+  <!-- <script type="text/javascript">Calendly.initBadgeWidget({url: 'https://calendly.com/drkentrateconsultants/60min', text: 'Schedule time with me', color: '#00a2ff', branding: true});</script> -->
   <!-- REPLACE WITH KENS INFO -->
 
 
